Fixed columns spacing on limited width desktop and tablet screens

--- a/brutus/css/single-artefacts.css
+++ b/brutus/css/single-artefacts.css
@@ -68,6 +68,7 @@
 @media only screen and (min-width: 768px) {
     .artefact-main {
         flex-direction: row;
+        gap: 1rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
@@ -100,7 +101,7 @@
     }
 
     .field-container .label {
-        width: 25%;
+        min-width: 25%;
 
         /* Match .label with .content margins */
         margin-top: 1rem;
